--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,28 +4,41 @@ version = "0.1.0"
 authors = ["David McKinney <mckinney@subgraph.com>"]
 edition = "2018"
 
+[package.metadata.system-deps.gtk_layer_shell_0]
+name = "gtk-layer-shell-0"
+version = "0.1"
+
 [dependencies]
 libc = "0.2"
 bitflags = "1.0"
-gdk = { git = "https://github.com/gtk-rs/gdk", features = ["v3_22"] }
 
-[dependencies.gtk-layer-shell-sys]
+[dependencies.ffi]
+package = "gtk-layer-shell-sys"
 path = "./gtk-layer-shell-sys"
 
+[dependencies.gdk]
+git = "https://github.com/gtk-rs/gtk-rs"
+features = ["v3_22"]
+
 [dependencies.gtk]
-git = "https://github.com/gtk-rs/gtk"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.gtk-sys]
-git = "https://github.com/gtk-rs/sys"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.gio]
-git = "https://github.com/gtk-rs/gio"
-
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.glib]
-git = "https://github.com/gtk-rs/glib"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.glib-sys]
-git = "https://github.com/gtk-rs/sys"
+git = "https://github.com/gtk-rs/gtk-rs"
 
+[build-dependencies]
+pkg-config = "0.3.7"
+system-deps = "2.0"
 
+[dev-dependencies]
+shell-words = "1.0.0"
+tempfile = "3"
