--- a/gtk-layer-shell-sys/Cargo.toml
+++ b/gtk-layer-shell-sys/Cargo.toml
@@ -3,6 +3,11 @@ name = "gtk-layer-shell-sys"
 version = "0.0.1"
 links = "gtk_layer_shell"
 build = "build.rs"
+[package.metadata.system-deps.gtk_layer_shell_0]
+name = "gtk-layer-shell-0"
+version = "0.1"
+[package.metadata.docs.rs]
+features = ["dox"]
 
 [lib]
 name = "gtk_layer_shell_sys"
@@ -11,32 +16,33 @@ name = "gtk_layer_shell_sys"
 libc = "0.2"
 
 [dependencies.cairo-sys-rs]
-git = "https://github.com/gtk-rs/cairo"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.gdk-sys]
-git = "https://github.com/gtk-rs/sys"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.gdk-pixbuf-sys]
-git = "https://github.com/gtk-rs/sys"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.gio-sys]
-git = "https://github.com/gtk-rs/sys"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.glib-sys]
-git = "https://github.com/gtk-rs/sys"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.gobject-sys]
-git = "https://github.com/gtk-rs/sys"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [dependencies.gtk-sys]
-git = "https://github.com/gtk-rs/sys"
+git = "https://github.com/gtk-rs/gtk-rs"
 
 [build-dependencies]
 pkg-config = "0.3.7"
+system-deps = "2.0"
 
 [dev-dependencies]
-shell-words = "0.1.0"
-tempdir = "0.3"
+shell-words = "1.0.0"
+tempfile = "3"
 
 [features]
 dox = []
