--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,11 @@ system-deps = "2.0"
 [dev-dependencies]
 shell-words = "1.0.0"
 tempfile = "3"
+
+[patch.crates-io]
+gdk = { version = "0.13.2", features = ["v3_22"] }
+gtk = { version = "0.9.0", features = ["v3_16"] }
+gtk-sys = "0.10.0"
+gio = "0.9.1"
+glib = "0.10.2"
+glib-sys = "0.10.1"
