--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,22 +18,29 @@ path = "./gtk-layer-shell-sys"
 
 [dependencies.gdk]
 git = "https://github.com/gtk-rs/gtk-rs"
+version = "0.13.0"
 features = ["v3_22"]
 
 [dependencies.gtk]
 git = "https://github.com/gtk-rs/gtk-rs"
+version = "0.13.0"
+features = ["v3_16"]
 
 [dependencies.gtk-sys]
 git = "https://github.com/gtk-rs/gtk-rs"
+version = "0.13.0"
 
 [dependencies.gio]
 git = "https://github.com/gtk-rs/gtk-rs"
+version = "0.13.0"
 
 [dependencies.glib]
 git = "https://github.com/gtk-rs/gtk-rs"
+version = "0.13.0"
 
 [dependencies.glib-sys]
 git = "https://github.com/gtk-rs/gtk-rs"
+version = "0.13.0"
 
 [build-dependencies]
 pkg-config = "0.3.7"
