--- a/Gir.toml
+++ b/Gir.toml
@@ -1,5 +1,5 @@
 [options]
-girs_dir = "./gir-files"
+girs_directories = ["./gir-files"]
 library = "GtkLayerShell"
 version = "0.1"
 min_cfg_version = "0.1"
